# -13_project_2

./: .gitignore  main.py  pyproject.toml
.pytest_cache/v/cache/: lastfailed  nodeids
data/: class_products.py
function/: utils.py
tests/: test_class_prodacts.py
