[tool.poetry]
name = "project-1"
version = "0.1.0"
description = ""
authors = ["Dmitry <k1791@mail.ru>"]
readme = "README.md"
packages = [{include = "project_1"}]

[tool.poetry.dependencies]
python = "^3.9"
pytest = "^7.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
